Cleanup of Baseline, Deep Tag Labeler experiments ongoing

--- a/code/Baseline Tag Labeler.ipynb
+++ b/code/Baseline Tag Labeler.ipynb
@@ -486,9 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Baseline Gradient Boosted Decision Tree Model\n",
-    "\n",
-    "It is useful to have a decision tree model to use as a baseline for comparison with our deep network model. XGBoost's implementation of gradient boosted decision trees is state of the art for this kind of application, but it can't do multi-class, multi-label classification. Therefore we use an [`xgboost.XGBClassifier`](https://xgboost.readthedocs.io/en/latest/python/python_api.html#xgboost.XGBClassifier) with an [`sklearn.multiclass.OneVsRestClassifier`](https://scikit-learn.org/stable/modules/generated/sklearn.multiclass.OneVsRestClassifier.html) on top of the XGBoost classifier to train one classifier model per label and then apply them to each label to compute the output for each.\n",
+    "## Create a Baseline Random Forest Decision Tree Model\n",
     "\n",
     "We define `VOCAB_SIZE`, `MAX_LENGTH` and `TEST_SPLIT` to define the number of unique words as input into our embedding, the sequence length for each input, and the test/train split for our performance testing.\n",
     "\n",
@@ -511,15 +509,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.multiclass import OneVsRestClassifier\n",
-    "from sklearn.preprocessing import LabelBinarizer\n",
-    "\n",
-    "from gensim.sklearn_api import W2VTransformer\n",
     "from gensim.models import Word2Vec\n",
-    "\n",
-    "import xgboost as xgb\n",
     "\n",
     "VOCAB_SIZE = 5000\n",
     "MAX_LENGTH = 100\n",
@@ -577,6 +567,7 @@
     }
    ],
    "source": [
+    "# Show that similar words to 'program' print\n",
     "w2v_model.wv.most_similar(positive='program')"
    ]
   },
@@ -597,6 +588,7 @@
     }
    ],
    "source": [
+    "# Encode the documents using the new embedding\n",
     "encoded_docs = [[w2v_model.wv[word] for word in post] for post in documents]\n",
     "len(encoded_docs)"
    ]
@@ -714,25 +706,6 @@
     "\n",
     "Note that the type of `padded_posts` is `list(list(np.array))`, an artifact of the Word2Vec mapping.\n",
     "\n",
-    "#### Create one Row per Label Column\n",
-    "\n",
-    "Training a `sklearn.multiclass.OneVsRestClassifier` with one `xgboost.XGBClassifier` per label exceeded 64GB of RAM and so we are remapping the data to have one instance of the row for each label column in a given row.\n",
-    "\n",
-    "For example:\n",
-    "\n",
-    "```python\n",
-    "# Input\n",
-    "rows, labels = [0.1, 0.3, 0.4, ...],[0,1,0,1]\n",
-    "\n",
-    "# Output\n",
-    "rows_w_labels = [\n",
-    "    ([0.1, 0.3, 0.4, ...], 0),\n",
-    "    ([0.1, 0.3, 0.4, ...], 1),\n",
-    "    ([0.1, 0.3, 0.4, ...], 0),\n",
-    "    ([0.1, 0.3, 0.4, ...], 1)\n",
-    "]\n",
-    "```\n",
-    "\n",
     "#### GPU and CPU RAM Requirements\n",
     "\n",
     "The configuration I use assumes 8GB of GPU RAM and 64GB of CPU RAM. If you have less GPU RAM, lower the `ITERATOR_MULTIPLE`. If you have less CPU RAM, reduce the number of records."
@@ -740,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +896,7 @@
        "11"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,41 +982,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1292800, 5000)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np_cpu_posts = np.concatenate(cpu_posts, axis=0)\n",
-    "\n",
-    "mempool.free_all_blocks()\n",
-    "pinned_mempool.free_all_blocks()\n",
-    "\n",
-    "del cpu_posts\n",
-    "cpu_posts = np_cpu_posts\n",
-    "\n",
-    "cpu_posts.shape\n",
-    "\n",
-    "mempool.free_all_blocks()\n",
-    "pinned_mempool.free_all_blocks()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a single numpy array out of the others\n",
+    "np_cpu_posts = np.concatenate(cpu_posts, axis=0)\n",
+    "\n",
+    "# Free any remaining GPU RAM\n",
+    "mempool.free_all_blocks()\n",
+    "pinned_mempool.free_all_blocks()\n",
+    "\n",
+    "# Delete the list of arrays\n",
+    "del cpu_posts\n",
+    "cpu_posts = np_cpu_posts\n",
+    "\n",
+    "# For some reason I had to clearn GPU RAM twice\n",
     "mempool.free_all_blocks()\n",
     "pinned_mempool.free_all_blocks()"
    ]
@@ -1057,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,15 +1044,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train the Baseline Model"
+    "### Prepare Train/Test Samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    cpu_posts,\n",
     "    labels,\n",
@@ -1111,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3147,7 +3103,7 @@
        "  ...])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3172,7 +3128,7 @@
        "(1034240, 258560)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3190,7 +3146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3222,7 +3178,7 @@
        " 23: 2.431382057499134}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3240,7 +3196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3249,7 +3205,7 @@
        "(1034240, 24)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3274,9 +3230,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing model in 'data/RandomForest.model'. Loading...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/envs/deep/lib/python3.6/site-packages/sklearn/base.py:306: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 0.21.2 when using version 0.21.3. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-8aee2b4860d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Found existing model in \\'{MODEL_PATH}\\'. Loading...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Successfully loaded model!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/deep/lib/python3.6/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m__setstate__\u001b[0;34m(self, state)\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    296\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 297\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__setstate__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    298\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__module__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'sklearn.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m             \u001b[0mpickle_version\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"_sklearn_version\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"pre-0.18\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import os, pickle\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -3314,7 +3298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3323,7 +3307,7 @@
        "((100000, 5000), (10000, 5000), (100000, 24), (10000, 24))"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3353,7 +3337,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 3 folds for each of 100 candidates, totalling 300 fits\n"
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
      ]
     },
     {
@@ -3402,7 +3386,7 @@
     "    param_distributions=random_grid,\n",
     "    scoring=['f1_micro', 'precision_micro', 'recall_micro', 'jaccard_micro',],\n",
     "    refit='f1_micro',\n",
-    "    n_iter=100,\n",
+    "    n_iter=10,\n",
     "    cv=3,\n",
     "    verbose=2,\n",
     "    random_state=1337,\n",
